[package]
name = "gitpushup"
version = "0.1.12"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "GitPushUp in rust!"
repository = "https://github.com/waldirborbajr/gitpushup"
homepage = "https://github.com/waldirborbajr/gitpushup"
readme = "README.md"
keywords = ["gitpushup", "git", "cli", "terminal"]
license = "MIT"

[[bin]]
name = "gitpushup"
path = "src/main.rs"

[dependencies]
colorful = "0.2.2"
names = "0.14.0"
regex = "1.10.2"

# [build]
# rustflags = ["-z", "threads=8"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
opt-level = 3
# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true

# build with `cargo build --profile ci`
# to analyze performance with tooling like linux perf
[profile.ci]
inherits = "dev"
strip = false
debug = false
