[package]
name = "gitpushup"
version = "0.1.16"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "GitPushUp in rust!"
repository = "https://github.com/waldirborbajr/gitpushup"
homepage = "https://github.com/waldirborbajr/gitpushup"
readme = "README.md"
keywords = ["gitpushup", "git", "cli", "terminal"]
license = "MIT"

[[bin]]
name = "gitpushup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.60", features = ["derive"] }
colorful = "0.3.2"
names = "0.14.0"
regex = "1.11.0"

[build]
rustflags = ["-z", "threads=8"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"        # smallest (try "s" if you want a bit faster, slightly bigger)
lto = "fat"            # usually reduces size (slower compile)
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

# build with `cargo build --profile profiling`
# to analyze performance with tooling like linux perf
[profile.profiling]
inherits = "release"
strip = false
debug = true

# build with `cargo build --profile ci`
# to analyze performance with tooling like linux perf
[profile.ci]
inherits = "dev"
strip = false
debug = false
